--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 
 svg {
-  font: 10px sans-serif;
+  font: 16px sans-serif;
 }
 
 .background path {
@@ -15,6 +15,7 @@ svg {
 .foreground path {
   fill: none;
   stroke: steelblue;
+  opacity: 0.7;
 }
 
 .brush .extent {
@@ -28,11 +29,18 @@ svg {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
+  opacity: 0.3;
+}
+
+#rule.axis {
+  stroke: #000;
+  opacity: 1.0;
 }
 
 .axis text {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
+
 
 </style>
 <body>
