Added Grid lines, moved axis to back
The brush is moved to the background as well though. Might work on code
to move it to the front.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ svg {
 }
 
 .brush .extent {
-  fill-opacity: .3;
+  fill-opacity: 0.2;
   stroke: #fff;
   shape-rendering: crispEdges;
 }
@@ -27,9 +27,9 @@ svg {
 .axis line,
 .axis path {
   fill: none;
-  stroke: #000;
+  stroke: lightgrey;
   shape-rendering: crispEdges;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 #rule.axis {
