Moved axis to front

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ svg {
 .axis line,
 .axis path {
   fill: none;
-  stroke: lightgrey;
+  stroke: #636363;
   shape-rendering: crispEdges;
   opacity: 0.7;
 }
