One plot for each brain area
Also synchronized brushing. Probably should have been two commits.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ svg {
   font: 16px
 }
 
-
 </style>
 <body>
+  <div id="vis"> </div>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="js/parallel-coord.js"></script>
+</body>
