Graphs side by side. Appropriate margins.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@ svg {
   font: 16px
 }
 
+.chart {
+  float: left;
+  padding-right: 1px;
+  padding-bottom: 1px;
+  padding-top:0;
+  padding-left:0;
+}
+
 </style>
 <body>
   <div id="vis"> </div>
