Highlight line on mouseover

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@ svg {
   shape-rendering: crispEdges;
 }
 
-path:active {
+.active {
   stroke-width: 2px;
+  stroke: black;
 }
 
-.foreground path {
+.foreground {
   fill: none;
   stroke: steelblue;
   stroke-width: 1px;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .brush .extent {
