Buttons for trial interval

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <a id="CH" class="">CH</a>
 </div>
 <div id="chart"> </div>
+<div id="intervalSelector">
+  <a id="Intertrial Interval" class="selected">Intertrial Interval</a>
+  <a id="Fixation" class="">Fixation</a>
+  <a id="Rule Stimulus" class="">Rule Stimulus</a>
+  <a id="Stimulus Response" class="">Stimulus Response</a>
+  <a id="Saccade" class="">Saccade</a>
+  <a id="Reward" class="">Reward</a>
+</div>
 <script>
 var cur_file = "Intertrial Interval apc";
 var params = {
