--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
+  <title>Rule Preference</title>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+<body role="document">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="js/parallel-coord.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <div class="container">
+    <div class="page-header">
+    </div>
+    <div class="row">
+      <div id="monkeySelector">
+        <a id="All" class="selected">All</a>
+        <a id="ISA" class="">ISA</a>
+        <a id="CC" class="">CC</a>
+        <a id="CH" class="">CH</a>
+      </div>
 
-<body>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="js/parallel-coord.js"></script>
-<div id="monkeySelector">
-  <a id="All" class="selected">All</a>
-  <a id="ISA" class="">ISA</a>
-  <a id="CC" class="">CC</a>
-  <a id="CH" class="">CH</a>
-</div>
-<div id="chart"> </div>
-<div id="intervalSelector">
-  <a id="Intertrial Interval" class="selected">Intertrial Interval</a>
-  <a id="Fixation" class="">Fixation</a>
-  <a id="Rule Stimulus" class="">Rule Stimulus</a>
-  <a id="Stimulus Response" class="">Stimulus Response</a>
-  <a id="Saccade" class="">Saccade</a>
-  <a id="Reward" class="">Reward</a>
+    </div>
+    <div class="row">
+      <div id="chart"> </div>
+    </div>
+    <div class="row">
+      <div id="intervalSelector">
+        <a id="Intertrial Interval" class="selected">Intertrial Interval</a>
+        <a id="Fixation" class="">Fixation</a>
+        <a id="Rule Stimulus" class="">Rule Stimulus</a>
+        <a id="Stimulus Response" class="">Stimulus Response</a>
+        <a id="Saccade" class="">Saccade</a>
+        <a id="Reward" class="">Reward</a>
+      </div>
+    </div>
+    <div class="row">
+      <p class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
+        Condition </strong> Normalized difference in firing rate between the
+        orientation rule and color rule at each condition. Each line represents
+        a neuron. The point at which the line intersects a particular axis (e.g. Repetition1)
+        is the normalized difference in firing rate in that condition.
+      </p>
+    </div>
+
+
+  </div>
 </div>
 <script>
 var cur_file = "Intertrial Interval apc";
