--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="page-header">
     </div>
     <div class="row">
+      <h4> Monkey: </h4>
       <div id="monkeySelector">
         <a id="All" class="selected">All</a>
         <a id="ISA" class="">ISA</a>
@@ -29,6 +30,7 @@
       <div id="chart"> </div>
     </div>
     <div class="row">
+      <h4> Time Interval: </h4>
       <div id="intervalSelector">
         <a id="Intertrial Interval" class="selected">Intertrial Interval</a>
         <a id="Fixation" class="">Fixation</a>
