--- a/index.html
+++ b/index.html
@@ -14,41 +14,40 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 <div class="container">
-  <div class="page-header">
-  </div>
-  <div class="row">
-    <h4> Monkey: </h4>
-    <div id="monkeySelector">
-      <a id="All" class="selected">All</a>
-      <a id="ISA" class="">ISA</a>
-      <a id="CC" class="">CC</a>
-      <a id="CH" class="">CH</a>
-    </div>
-  </div>
-  <div class="row">
-    <div id="chart"> </div>
-  </div>
-  <div class="row">
-    <h4> Time Interval: </h4>
+  <div class="row" role="navigation" data-spy="affix" data-offset-top="125" id="filterNav">
     <div id="intervalSelector">
-      <a id="Intertrial Interval" class="selected">Intertrial Interval</a>
-      <a id="Fixation" class="">Fixation</a>
-      <a id="Rule Stimulus" class="">Rule Stimulus</a>
-      <a id="Stimulus Response" class="">Stimulus Response</a>
-      <a id="Saccade" class="">Saccade</a>
-      <a id="Reward" class="">Reward</a>
+      <div class="btn-group " role="group" aria-label="Time Interval">
+        <a id="Intertrial Interval" class="btn btn-default selected" role="button" href="#">Intertrial Interval</a>
+        <a id="Fixation" class="btn btn-default" role="button" href="#">Fixation</a>
+        <a id="Rule Stimulus" class="btn btn-default" role="button" href="#">Rule Stimulus</a>
+        <a id="Stimulus Response" class="btn btn-default" role="button" href="#">Stimulus Response</a>
+        <a id="Saccade" class="btn btn-default" role="button" href="#">Saccade</a>
+        <a id="Reward" class="btn btn-default" role="button" href="#">Reward</a>
+      </div>
+    </div>
+    <div id="monkeySelector">
+      <div class="btn-group" role="group" aria-label="Monkey">
+        <a id="All" class="btn btn-default selected" role="button" href="#">All Monkeys</a>
+        <a id="ISA" class="btn btn-default" role="button" href="#">Monkey ISA</a>
+        <a id="CC" class="btn btn-default" role="button" href="#">Monkey CC</a>
+        <a id="CH" class="btn btn-default" role="button" href="#">Monkey CH</a>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <p class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
-      Condition </strong> Normalized difference in firing rate between the
-      orientation rule and color rule at each condition. Each line represents
-      a neuron. The point at which the line intersects a particular axis (e.g. Repetition1)
-      is the normalized difference in firing rate in that condition.
-    </p>
-  </div>
+</nav>
 
-
+<div class="page-header">
+</div>
+<div class="row">
+  <div id="chart"> </div>
+</div>  <div class="row">
+  <p class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
+    Condition </strong> Normalized difference in firing rate between the
+    orientation rule and color rule at each condition. Each line represents
+    a neuron. The point at which the line intersects a particular axis (e.g. Repetition1)
+    is the normalized difference in firing rate in that condition.
+  </p>
+</div>
 </div>
 </div>
 <script>
@@ -56,7 +55,7 @@ var cur_file = "Intertrial Interval apc";
 var params = {
   data: cur_file,
   width:960,
-  height:600
+  height:500
 };
 
 // Initialized visualization
