slider instead of buttons to change time period
Probably will change because axis are hard to set.  Going to use a brush
on an axis instead

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body role="document">
   <div class="container">
     <div class="row" role="navigation" data-spy="affix" data-offset-top="125" id="filterNav">
+      <input id="slider" type="range" step="1" max="5" min="0" value="0">
       <div id="intervalSelector">
         <div class="btn-group " role="group" aria-label="Time Interval">
           <a id="Intertrial Interval" class="btn btn-default selected" role="button" href="#">Intertrial Interval</a>
