Naming variables more consistency

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         };
 
         // Initialized visualization
-        vis.init(params);
+        rulePrefVis.init(params);
     </script>
 
 </body>
