--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="js/parallel-coord.js"></script>
+    <script src="js/rulePref.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
