better data file name

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script>
         var cur_file =
-            "Intertrial Interval apc";
+            "Intertrial Interval norm_apc";
         var params = {
             data: cur_file,
             width: 960,
