Cleanup variable scope

--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
-        var cur_file =
-            "Intertrial Interval norm_apc";
-        var params = {
-            data: cur_file,
+        var rulePrefParams = {
+            data: "Intertrial Interval norm_apc",
             width: 960,
             height: 500
         };
 
         // Initialized visualization
-        rulePref.init(params);
+        rulePref.init(rulePrefParams);
     </script>
 
 </body>
