Mouseclick leads to Raster plot relative to time

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <div class="btn-group " role="group" aria-label="Time Interval">
                     <a id="Intertrial Interval" class="btn btn-default selected" role="button" href="#">Intertrial Interval</a>
                     <a id="Fixation" class="btn btn-default" role="button" href="#">Fixation</a>
-                    <a id="Rule Stimulus" class="btn btn-default" role="button" href="#">Rule Stimulus</a>
-                    <a id="Stimulus Response" class="btn btn-default" role="button" href="#">Stimulus Response</a>
+                    <a id="Rule Stimulus" class="btn btn-default" role="button" href="#">Rule</a>
+                    <a id="Stimulus Response" class="btn btn-default" role="button" href="#">Test Stimulus</a>
                     <a id="Saccade" class="btn btn-default" role="button" href="#">Saccade</a>
                     <a id="Reward" class="btn btn-default" role="button" href="#">Reward</a>
                 </div>
