New file names, prep time categories

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
 
 <head>
     <meta charset="utf-8">
@@ -30,20 +29,18 @@
                 </div>
             </div>
         </div>
-        <div class="page-header">
-        </div>
+        <div class="page-header"></div>
         <div class="row">
-            <div id="chart"> </div>
+            <div id="chart"></div>
         </div>
         <div class="row">
             <p id="figure-3" class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
-        Condition </strong> Normalized difference in firing rate between the orientation
+              Condition </strong> Normalized difference in firing rate between the orientation
                 rule and color rule at each condition. Each line represents a neuron.
                 The point at which the line intersects a particular axis (e.g. Repetition1)
                 is the normalized difference in firing rate in that condition.
             </p>
         </div>
-    </div>
     </div>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -54,7 +51,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script>
         var rulePrefParams = {
-            data: "Intertrial Interval norm_apc",
+            data: "Intertrial Interval norm_apc rule interactions",
             width: 960,
             height: 500
         };
