--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="js/parallel-coord-RulePref.js"></script>
     <script src="js/parallel-coord-MainEffects.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
