Better chart IDs

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
         <div class="page-header"></div>
         <div class="row">
-            <div id="figure2-chart"></div>
+            <div id="mainEffects-chart"></div>
         </div>
         <div class="row">
-            <div id="figure3-chart"></div>
+            <div id="ruleInteractions-chart"></div>
         </div>
         <div class="row">
             <p id="figure-3" class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
