Added average firing rate histograms

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
         <div class="page-header"></div>
         <div class="row">
+            <div id="avgFiring-chart"></div>
+        </div>
+        <div class="row">
             <div id="mainEffects-chart"></div>
         </div>
         <div class="row">
