Remove unnecessary divs

--- a/index.html
+++ b/index.html
@@ -30,15 +30,9 @@
             </div>
         </div>
         <div class="page-header"></div>
-        <div class="row">
-            <div id="avgFiring-chart"></div>
-        </div>
-        <div class="row">
-            <div id="mainEffects-chart"></div>
-        </div>
-        <div class="row">
-            <div id="ruleInteractions-chart"></div>
-        </div>
+        <div class="row" id="avgFiring-chart"></div>
+        <div class="row" id="mainEffects-chart"></div>
+        <div class="row" id="ruleInteractions-chart"></div>
         <div class="row">
             <p id="figure-3" class="col-md-8">Figure 3: <strong> Rule Preference by Brain Area and
               Condition </strong> Normalized difference in firing rate between the orientation
